--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,10 @@ nav .active{ @apply bg-light-red}
 .site-header .main-nav ul li:nth-child(2){@apply ml-0 lg:ml-2.5 }
 .site-header .main-nav ul li:nth-child(12) a{  @apply text-red}
 .site-header .main-nav ul li a{  @apply inline-block w-full   px-6 xl:px-8 align-top relative lg:border-t-2 border-transparent hover:border-red}
-.logo{@apply w-full text-center }
+.logo{@apply text-center;
+ display: block;
+ padding: 20px;
+}
 .logo-inner{@apply max-w-[9.375rem] mx-auto lg:mx-0  lg:max-w-[14.375rem] }
 .logo svg{@apply  mx-auto lg:mx-0  }
 
@@ -133,6 +136,10 @@ body.mapView .mobile-btns .btn.mapBtn{  @apply text-Dark-red border-t-0 border-l
 .search-bx .search-btn{@apply absolute top-0 rounded-none right-0  text-white p-2 w-12 h-12 text-center bg-red hover:bg-hover-btn;
   background-color: #9d743d;
   }  
+  .search-bx .search-btn:hover{
+    background-color: #f1d7b1;
+    border: 1px solid black;
+  }
 .search-bx .search-btn svg{ @apply mx-auto}
 .search-field input{@apply  w-full bg-white h-12 text-dark-gray placeholder:text-dark-gray  py-2 pr-20 sm:py-4 sm:pr-40 pl-4 leading-7  text-[1.0625rem] font-main-font  border border-[#8c8c8c] rounded-none }
 .location p{ @apply mr-2 absolute rounded-lg -left-4 top-[0px] sm:top-[2px] xl:top-1}
@@ -146,7 +153,9 @@ body.mapView .mobile-btns .btn.mapBtn{  @apply text-Dark-red border-t-0 border-l
    
 .location .button-bx{  @apply max-w-lg justify-start xl:mx-auto pl-2 flex-row lg:pl-7}
 .result-list .location{ @apply first:mt-0}
-.location .button-bx .btn{@apply w-[9.75rem] bg-Dark-red font-second-main-font text-lg  border-none text-white    }
+.location .button-bx .btn{@apply w-[9.75rem] bg-Dark-red font-second-main-font text-lg  border-none text-white;
+  background-color: #9d743d;
+}
 .location .button-bx .btn.notHighligh{@apply w-full md:w-[48%] bg-transparent justify-start mt-0  border-none text-black underline  }
 .location .button-bx .btn + .btn{  @apply mt-2 ml-2 md:mt-0 hover:no-underline   w-auto }
 .location .button-bx .btn:hover svg{@apply !fill-red }
@@ -158,8 +167,8 @@ body.mapView .mobile-btns .btn.mapBtn{  @apply text-Dark-red border-t-0 border-l
 .location .result-inner .green-dot, .location .result-inner .red-dot{ @apply  flex justify-center items-center flex-row-reverse  }
 .location .result-inner .green-dot svg, .location .result-inner .red-dot svg{ @apply  ml-1 mt-1 }
 .location-with-filter{ @apply mb-6 flex items-center justify-between text-sm leading-5}
-.location-with-filter h1{@apply text-lg font-normal text-dark-gray my-0 font-second-main-font text-[1.75rem]
-  
+.location-with-filter h1{@apply text-lg font-normal text-dark-gray my-0 font-second-main-font text-[1.75rem];
+  margin-left: 20px;
 }
 .list-count{ @apply border-b border-gray-light mb-4 p-2 flex  flex-row items-center}
 .result-inner{@apply p-4 }
@@ -297,11 +306,20 @@ nav[aria-label="Pagination"] button:disabled{@apply cursor-not-allowed text-opac
 .pagination-conatiner{ @apply mt-4}
 .nearby-btn .btn{ @apply !w-full}
 .nearby-card .button-bx{@apply ml-0 lg:ml-0 flex-row justify-start }
-.nearby-card .button-bx .btn{@apply w-[9.75rem] bg-Dark-red hover:bg-hover-btn font-second-main-font py-2.5  border-none text-white  }
+.nearby-card .button-bx .btn{@apply w-[9.75rem] bg-Dark-red hover:bg-hover-btn font-second-main-font py-2.5  border-none text-white;
+  background-color: #9d743d;
+}
+.nearby-card .button-bx .btn:hover{
+  background-color: #f1d7b1;
+  color: black;
+  border: 1px solid black ;
+}
 .nearby-card .button-bx .btn.notHighligh{@apply w-full md:w-[48%] ml-2 bg-white justify-start  border-none text-black underline  }
 .nearby-card .button-bx .btn + .btn{@apply mt-2 md:mt-0 w-auto hover:no-underline}
 .nearby-card .button-bx .btn:hover svg{@apply !fill-red }
-.map-section .button-bx .btn{@apply w-[11.25rem] md:w-[9.25rem] lg:w-[11.25rem]  bg-Dark-red hover:bg-hover-btn font-second-main-font  border-none text-white  }
+.map-section .button-bx .btn{@apply w-[11.25rem] md:w-[9.25rem] lg:w-[11.25rem]  bg-Dark-red hover:bg-hover-btn font-second-main-font  border-none text-white;
+  background-color: #9d743d !important;
+}
 .map-section .button-bx .btn.notHighligh{@apply w-full md:w-[48%] bg-white justify-start  border-none text-black underline  }
 .map-section .button-bx .btn + .btn{@apply mt-2 md:mt-0 w-auto ml-2 hover:no-underline}
 .map-section .button-bx .btn:hover svg{@apply !fill-red }
@@ -351,7 +369,9 @@ nav[aria-label="Pagination"] button:disabled{@apply cursor-not-allowed text-opac
 .hero-section .hero-content .banner-text{  @apply border-l-2 border-dashed border-white px-7}
 .hero-section .hero-content h1{  @apply text-3xl md:text-5xl font-normal mb-3}
 .hero-section .hero-content p{@apply max-w-2xl}
-.banner-text h1{ @apply text-red text-[2.4375rem] mb-3  mt-8 font-second-main-font}
+.banner-text h1{ @apply text-red text-[2.4375rem] mb-3  mt-8 font-second-main-font;
+  color: #6c4e25;
+}
 
 /* address sec */
 .location-information{  @apply flex flex-wrap w-full justify-between xl:justify-start max-w-[87.5rem] mx-auto md:px-5 xl:px-4 2xl:px-0 pb-7 pt-1 md:py-11}
@@ -377,8 +397,12 @@ nav[aria-label="Pagination"] button:disabled{@apply cursor-not-allowed text-opac
 .opennow-sec .icons{@apply min-w-[0.75rem] sm:min-w-[1.25rem] mr-1 sm:mr-1}
 .opennow-sec .icons img{@apply w-5 sm:w-5}
 .direction-button{@apply mt-6 }
-.direction-button a{@apply  !bg-Dark-red !text-white  !border-button-light hover:!border-transparent !border-2 }
-.direction-button .btn:hover svg{@apply !fill-red }
+.direction-button a{@apply  !bg-Dark-red !text-white  !border-button-light hover:!border-transparent !border-2 ;
+  background-color: #9d743d !important;
+}
+.direction-button .btn:hover svg{@apply !fill-red;
+  background-color: #f1d7b1 !important;
+}
 .opennow-sec.deactive-feci{@apply opacity-70 text-red }
 .address-main-sec .button-bx{  @apply mt-5 justify-start ml-0 md:ml-0}
 .address-main-sec .button-bx .btn{  @apply min-w-[10.25rem] w-40 py-3 uppercase font-second-main-font !border-none hover:!bg-hover-btn leading-5  md:w-auto  }
@@ -419,7 +443,9 @@ nav[aria-label="Pagination"] button:disabled{@apply cursor-not-allowed text-opac
 /* services sec */
 .services-sec{@apply bg-white w-full pt-8 pb-16 md:py-9 }
 .sec-title{@apply mb-4 md:mb-7}
-.sec-title h2, .sec-title h1{@apply text-center text-2xl font-second-main-font md:text-[1.75rem] text-red  }
+.sec-title h2, .sec-title h1{@apply text-center text-2xl font-second-main-font md:text-[1.75rem] text-red;
+  color: #6c4e25;
+}
 .sec-title h1{@apply mb-5}
 .services-inner{@apply flex flex-wrap  }
 .services-inner .service-icon{@apply  m-0 }
@@ -570,7 +596,7 @@ nav[aria-label="Pagination"] button:disabled{@apply cursor-not-allowed text-opac
   @apply flex-wrap
 }
 .city-location .button-bx .btn{
-  @apply w-full md:w-[48%]
+  @apply w-full md:w-[48%];
 }
 .city-location .button-bx .btn + .btn{
   @apply mt-2 md:mt-0
